# freeciv-ai

./: .clang-format  .clangd  .dir-locals.el  .gitignore  .gitmodules  README.md  build-freeciv.sh  build_freeciv.sh  meson.build  server.sh  tiny.serv
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: action-masking.md  action-space-scaling.md  coordinate-spaces.md  exploration-rl.md  index.md  play.md
docs/tutorials/: 01-exploration-rl.md  02-action-space-scaling.md  03-play.md  04-action-masking.md
python/: client.py  gen_map_examples.py  pyproject.toml
python/freeciv_ai/: __init__.py  __main__.py  _lib.py  _logging.py  client.py  constants.py  map_renderer.py  repl.py  server.py  tui.py
python/freeciv_ai/torch/: __init__.py  env.py  model.py  play.py  train.py
python/tests/: conftest.py  test_env.py  test_gen_map_examples.py  test_lib_parser.py  test_map_geometry.py  test_repl_display.py  test_server.py  test_smoke.py
src/: meson.build
src/client-ai/: canvas.c  dialogs.c  diplodlg.c  editgui_stubs.c  gui_callbacks.c  gui_main.c  gui_setup.c  gui_stubs.c  meson.build  sprite.c  sprite.h
src/freeciv-ai-lib/: chatline.c  dialogs.c  diplodlg.h  freeciv_ai.c  freeciv_ai.h  freeciv_ai_action.h  gui_callbacks.c  mapctrl.c  mapview_overrides.c  meson.build  optiondlg.c  optiondlg.h
